src/objects/Key_Generator_Exception__mdt.object
<CustomObject>
    <fields>
        <fullName>Applicable_Versions__c</fullName>
        <label>Applicable Versions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Entity__c</fullName>
        <inlineHelpText>If this is a country exception, include the country name. If organization exception include the Compass ID.</inlineHelpText>
        <label>Exception Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Block</fullName>
                    <default>true</default>
                    <label>Block</label>
                </value>
                <value>
                    <fullName>Block if no MX</fullName>
                </value>
                <value>
                    <fullName>No Block on MX</fullName>
                </value>
                <value>
                    <fullName>Count Match</fullName>
                </value>
                <value>
                    <fullName>Count &amp; Type Match</fullName>
                </value>
                <value>
                    <fullName>Named or CPU Count Match</fullName>
                </value>
                <value>
                    <fullName>Type Match</fullName>
                </value>
                <value>
                    <fullName>At Least One</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Key_Request_Create_Date__c</fullName>
        <label>Product Key Request Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Country</fullName>
                    <default>true</default>
                    <label>Country</label>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Organization Legacy</fullName>
                </value>
                <value>
                    <fullName>Key Group</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Module Requirement</fullName>
                </value>
                <value>
                    <fullName>Model Requirement</fullName>
                </value>
                <value>
                    <fullName>Blacklisted Product</fullName>
                </value>
                <value>
                    <fullName>Replication Environment</fullName>
                </value>
                <value>
                    <fullName>Replication Key Group</fullName>
                </value>
                <value>
                    <fullName>Replication Base</fullName>
                </value>
                <value>
                    <fullName>Bundle Base Server</fullName>
                </value>
                <value>
                    <fullName>Base Feature</fullName>
                </value>
                <value>
                    <fullName>Product Key Request Date</fullName>
                </value>
                <value>
                    <fullName>Type Match</fullName>
                    <isActive>false</isActive>
                    <label>Type Match</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Key Generator Exception</label>
    <pluralLabel>Key Generator Exceptions</pluralLabel>
</CustomObject>